<resources>
    <string name="app_name">Barber Finance</string>
    <string name="sales">Vendas</string>
    <string name="method_payment">Método de pagamento</string>
    <string name="service_cost">Dados do serviço</string>
    <string name="conclusion">Venda Registrada</string>
    <string name="result">Resultados</string>
    <string name="credi_card">Cartão de crédito</string>
    <string name="credit">crédito</string>
    <string name="money">Dinheiro</string>
    <string name="barber">Barbeiro</string>
    <string name="installment_sale">Fiado</string>
    <string name="fernando">Fernando</string>
    <string name="junior">Junior</string>
    <string name="value_0_00">0,00</string>
    <string name="conclude">Concluir</string>
    <string name="sifrao">R$</string>
    <string name="method_payment_key">METHOD_PAYMENT</string>
    <string name="service_cost_key">SERVICE_COST</string>
    <string name="barber_key">BARBER_KEY</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>
