<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_barber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_20dp"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/barber"
        android:textColor="@color/black"
        android:textSize="@dimen/default_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/group_chip"
        style="@style/buttonChip"
        android:layout_marginTop="@dimen/default_10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/label_barber"
        app:layout_constraintTop_toBottomOf="@+id/label_barber">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_fernando"
            style="@style/buttonChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/fernando"
            android:textSize="@dimen/default_20sp" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_junior"
            style="@style/buttonChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="@dimen/default_16dp"
            android:text="@string/junior"
            android:textSize="@dimen/default_20sp" />
    </com.google.android.material.chip.ChipGroup>


    <EditText
        android:id="@+id/value_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:fontFamily="@font/roboto_bold"
        android:inputType="number"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/default_16dp"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_chip" />

        <Button
            android:id="@+id/button_concludes"
            android:layout_width="@dimen/default_0dp"
            android:layout_height="48dp"
            android:text="@string/conclude"
            android:fontFamily="@font/roboto"
            android:textColor="@android:color/white"
            android:layout_margin="@dimen/default_16dp"
            android:background="@drawable/rounded_red_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>